--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -898,6 +898,13 @@ GtkIconView {
     padding: 0;
 }
 
+GtkIconView.view.cell:selected,
+GtkIconView.view.cell:selected:focused {
+    background-color: @selected_bg_color;
+    border-radius: 4;
+    -adwaita-focus-border-color: @selected_bg_color;
+}
+
 .view {
     background-color: @theme_base_color;
     color: @theme_fg_color;
