adwaita: tweak the focus-ring color for icon view
This is not optimal, but it's the best we can do for now.

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -902,7 +902,12 @@ GtkIconView.view.cell:selected,
 GtkIconView.view.cell:selected:focused {
     background-color: @selected_bg_color;
     border-radius: 4;
-    -adwaita-focus-border-color: @selected_bg_color;
+
+    /* FIXME: this probably needs to be better;
+     * see https://bugzilla.gnome.org/show_bug.cgi?id=644157
+     */
+    -adwaita-focus-border-color: @progressbar_border;
+    -adwaita-focus-border-radius: 3;
 }
 
 .view {
