adwaita: Use 1px border without any style for menu items
The prelighted state uses a border that makes the whole menubar taller.

https://bugzilla.gnome.org/show_bug.cgi?id=643315

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -544,6 +544,11 @@ GtkComboBox.button {
     border-color: @inactive_frame_color;
 }
 
+.menubar.menuitem {
+    border-width: 1;
+    border-style: none;
+}
+
 .menu {
     padding: 2;
 
