treeview: use the old focus ring color for the treeview rows

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -949,6 +949,7 @@ GtkTreeView {
     -GtkWidget-focus-line-width: 1;
     -adwaita-focus-border-radius: 0;
     -adwaita-focus-border-dashes: 0;
+    -adwaita-focus-border-color: @keyboard_focus_border_a;
 }
 
 column-header {
