--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -1067,6 +1067,10 @@ GtkCalendar.highlight {
     color: @error_fg_color;
 }
 
+.dim-label {
+    color: mix (@theme_fg_color, @theme_bg_color, 0.50);
+}
+
 GtkTreeView.GtkFileChooserDefaultSidebar {
     background-color: #f6f6f4;
 }
