--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -143,8 +143,7 @@
     -adwaita-focus-border-color: @keyboard_focus_border_a;
     -adwaita-focus-border-radius: 2;
     -adwaita-focus-fill-color: none;
-    -adwaita-focus-border-gradient-a: none;
-    -adwaita-focus-border-gradient-b: none;
+    -adwaita-focus-border-gradient: none;
 }
 
 /***************
@@ -477,8 +476,10 @@ GtkComboBox.button {
     padding: 3;
 
     -adwaita-focus-fill-color: alpha (@theme_base_color, 0.35);
-    -adwaita-focus-border-gradient-a: alpha (@keyboard_focus_border_a, 0.62);
-    -adwaita-focus-border-gradient-b: alpha (@keyboard_focus_border_b, 0.62);
+    -adwaita-focus-border-gradient: -gtk-gradient (linear,
+                                                   left top, left bottom,
+                                                   from (alpha (@keyboard_focus_border_a, 0.62)),
+                                                   to (alpha (@keyboard_focus_border_b, 0.62)));
     -adwaita-focus-border-radius: 1;
     -GtkWidget-focus-line-width: 2;
 
@@ -732,8 +733,7 @@ GtkComboBox.button {
 
     -GtkWidget-focus-line-width: 0;
     -adwaita-focus-fill-color: none;
-    -adwaita-focus-border-gradient-a: none;
-    -adwaita-focus-border-gradient-b: none;
+    -adwaita-focus-border-gradient: none;
 }
 
 .primary-toolbar.toolbar.button:insensitive {
