--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -123,16 +123,12 @@
     -GtkHTML-link-color: @link_color;
 
     -GtkWidget-wide-separators: 1;
-    -GtkWidget-separator-height: 1;
 
     -WnckTasklist-fade-overlay-rect: 0;
 
     -GtkEntry-inner-border: 2;
     -GtkButton-inner-border: 2;
     -GtkEntry-progress-border: 0;
-
-    -GtkSeparatorToolItem-shadow-type: none;
-    -GtkSeparator-shadow-type: none;
 
     /* Style */
     background-color: @theme_bg_color;
@@ -589,6 +585,7 @@ GtkComboBox.button {
     border-color: @inactive_frame_color;
 
     -GtkSeparatorMenuItem-horizontal-padding: 0;
+    -GtkWidget-separator-height: 1;
 }
 
 /* menu radio and check items are drawn differently */
@@ -713,6 +710,8 @@ GtkComboBox.button {
 
     -GtkWidget-window-dragging: true;
     -GtkToolbar-button-relief: 0;
+    -GtkWidget-separator-width: 1;
+    -GtkWidget-wide-separators: 1;
 }
 
 .primary-toolbar.toolbar:insensitive {
@@ -788,11 +787,9 @@ GtkComboBox.button {
 
 .primary-toolbar.toolbar.separator {
     border-style: solid;
+    border-width: 1;
     border-color: shade (@theme_bg_color, 0.56);
-
-    background-image: none;
 }
-
 
 /* primary toolbar raised buttons */
 .primary-toolbar.toolbar.raised.button,
