adwaita: properly theme GtkScale marks

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -328,6 +328,10 @@ GtkScale.progressbar {
     border-style: solid;
 }
 
+GtkScale.mark {
+    background-color: shade (@theme_bg_color, 0.56);
+}
+
 GtkFrame,
 GtkCalendar {
     padding: 2;
