scrollbars: add 1px spacing between stepper and slider
Now that the GTK+ bug is fixed we can finally have scrollbars the way we
want :)

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -418,6 +418,9 @@ GtkComboBox.button {
     -GtkRange-slider-width: 18;
     -GtkRange-stepper-size: 18;
     -GtkScrollbar-min-slider-length: 30; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */
+
+    -GtkRange-stepper-spacing: 1;
+    -GtkRange-trough-under-steppers: 1;
 }
 
 .scrollbar.trough {
