adwaita: add a way to theme menu arrows
With an engine property, there seems no way to do that from GTK+ proper.

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -587,6 +587,10 @@ GtkComboBox.button {
 
 }
 
+.menuitem {
+    -adwaita-menuitem-arrow-color: @menu_controls_color;
+}
+
 .menuitem:active,
 .menuitem:prelight {
     background-color: @selected_bg_color;
