--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -591,6 +591,15 @@ GtkComboBox.button {
     -adwaita-menuitem-arrow-color: @menu_controls_color;
 }
 
+.menuitem.accelerator {
+    color: alpha (@theme_text_color, 0.66);
+}
+
+.menuitem.accelerator:prelight,
+.menuitem.accelerator:active {
+    color: alpha (@theme_base_color, 0.49);
+}
+
 .menuitem:active,
 .menuitem:prelight {
     background-color: @selected_bg_color;
