switch: set a smaller bold font for the switch

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -875,6 +875,11 @@ GtkComboBox.button {
 /*************
  * GtkSwitch *
  *************/
+
+GtkSwitch {
+    font: bold condensed 10;
+}
+
 GtkSwitch.trough {
     color: @internal_element_color;
     border-radius: 1;
