--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -1142,8 +1142,8 @@ GtkCalendar.highlight {
     color: mix (@theme_fg_color, @theme_bg_color, 0.50);
 }
 
-GtkTreeView.GtkFileChooserDefaultSidebar {
-    background-color: #f6f6f4;
+.sidebar {
+    background-color: shade (@theme_base_color, 0.95);
 }
 
 ApDocView, /* Abiword */
