--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -1,26 +1,41 @@
 /* Default color scheme */
-@define-color base_color #ffffff;
-@define-color bg_color #ededed;
+
 @define-color tooltip_bg_color #343434;
 @define-color selected_bg_color #4a90d9;
-@define-color text_color #2e3436;
-@define-color fg_color #2e3436;
 @define-color tooltip_fg_color #ffffff;
 @define-color selected_fg_color #ffffff;
 
 /* Colormap actually used by the theme, to be overridden in other css files */
-@define-color theme_base_color @base_color;
-@define-color theme_text_color @text_color;
-@define-color theme_bg_color @bg_color;
-@define-color theme_fg_color @fg_color;
+@define-color theme_base_color #000000;
+@define-color theme_text_color #d3d7cf;
+@define-color theme_bg_color #383a36;
+@define-color theme_fg_color #d3d7cf;
+
 @define-color theme_tooltip_bg_color @tooltip_bg_color;
 @define-color theme_tooltip_fg_color @tooltip_fg_color;
 @define-color theme_selected_bg_color @selected_bg_color;
 @define-color theme_selected_fg_color @selected_fg_color;
 
+@define-color button_gradient_color_a #0a0c0a;
+@define-color button_gradient_color_b #252825;
+@define-color button_border #505450;
+@define-color button_active_gradient_color #495649;
+
+@define-color insensitive_bg_color #0b0b0d;
+@define-color insensitive_fg_color #585458;
+
+@define-color inactive_frame_color shade (@theme_bg_color, 1.19);
+
+@define-color notebook_border #595959;
+@define-color notebook_active_tab_border #b0c0d1;
+@define-color notebook_selected_tab_color #b5bfc9;
+
+@define-color switch_slider_color #111113;
+@define-color switch_slider_border #2a79cb;
+
+/* FIXME: needs dark colors from here */
 @define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
-@define-color inactive_frame_color #c7ccc1;
 @define-color warning_color #f57900;
 @define-color error_color #cc0000;
 @define-color success_color #4e9a06;
@@ -42,22 +57,11 @@
 
 @define-color focused_entry_border #579eea;
 
-@define-color button_gradient_color_a #f4f6f4;
-@define-color button_gradient_color_b #d7dad7;
-@define-color button_border #a7aba7;
-@define-color button_active_gradient_color #a2a9a2;
-
-@define-color insensitive_bg_color #f4f4f2;
-@define-color insensitive_fg_color #a7aba7;
-
 @define-color trough_bg_color_a #ccccc7;
 @define-color trough_bg_color_b #e4e4e1;
 
 @define-color active_switch_bg_color_a #509ae7;
 @define-color active_switch_bg_color_b #84b8ee;
-
-@define-color switch_slider_color #eeeeec;
-@define-color switch_slider_border #2a79cb;
 
 @define-color progressbar_background_a #1f72c6;
 @define-color progressbar_background_b #76b0ec;
@@ -72,10 +76,6 @@
 @define-color highlighted_border #8a8f8a;
 @define-color internal_element_color #888a85;
 
-@define-color notebook_border #a6a6a6;
-@define-color notebook_active_tab_border #1372d3;
-@define-color notebook_selected_tab_color #8dc0f3;
-
 @define-color toolbar_gradient_base #aaaa9e;
 @define-color toolbar_gradient_step1 #bcbcb4;
 @define-color toolbar_gradient_step2 #d9d9d7;
@@ -83,4 +83,4 @@
 
 @define-color toolbar_active_button_color #909081;
 
-@import url("gtk-widgets.css");
+@import url ("gtk-widgets.css");
