--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -1,20 +1,15 @@
-/* Default color scheme */
+/* dark colormap */
 
-@define-color tooltip_bg_color #343434;
-@define-color selected_bg_color #4a90d9;
-@define-color tooltip_fg_color #ffffff;
-@define-color selected_fg_color #ffffff;
-
-/* Colormap actually used by the theme, to be overridden in other css files */
+/* FIXME: I made up most of these colors, need proper design */
 @define-color theme_base_color #000000;
 @define-color theme_text_color #d3d7cf;
 @define-color theme_bg_color #383a36;
 @define-color theme_fg_color #d3d7cf;
+@define-color theme_selected_bg_color #c8d6e6;
+@define-color theme_selected_fg_color #000000;
 
-@define-color theme_tooltip_bg_color @tooltip_bg_color;
-@define-color theme_tooltip_fg_color @tooltip_fg_color;
-@define-color theme_selected_bg_color @selected_bg_color;
-@define-color theme_selected_fg_color @selected_fg_color;
+@define-color theme_tooltip_bg_color #cbcbcb;
+@define-color theme_tooltip_fg_color #000000;
 
 @define-color button_gradient_color_a #0a0c0a;
 @define-color button_gradient_color_b #252825;
@@ -31,7 +26,16 @@
 @define-color notebook_selected_tab_color #b5bfc9;
 
 @define-color switch_slider_color #111113;
-@define-color switch_slider_border #2a79cb;
+@define-color switch_slider_border #a5b8cc;
+
+@define-color highlighted_border #757075;
+@define-color internal_element_color #77757a;
+
+@define-color progressbar_background_a #abbac9;
+@define-color progressbar_background_b #76b0ec;
+@define-color progressbar_border #8ca5bf;
+
+@define-color focused_entry_border #cadaeb;
 
 /* FIXME: needs dark colors from here */
 @define-color link_color #4a90d9;
@@ -55,26 +59,17 @@
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
 
-@define-color focused_entry_border #579eea;
-
 @define-color trough_bg_color_a #ccccc7;
 @define-color trough_bg_color_b #e4e4e1;
 
 @define-color active_switch_bg_color_a #509ae7;
 @define-color active_switch_bg_color_b #84b8ee;
 
-@define-color progressbar_background_a #1f72c6;
-@define-color progressbar_background_b #76b0ec;
-@define-color progressbar_border #3277bf;
-
 @define-color scale_fill_a #2c85e2;
 @define-color scale_fill_b #b8d6f5;
 
 @define-color menu_fg_color #2e87e3;
 @define-color menu_controls_color #555753;
-
-@define-color highlighted_border #8a8f8a;
-@define-color internal_element_color #888a85;
 
 @define-color toolbar_gradient_base #aaaa9e;
 @define-color toolbar_gradient_step1 #bcbcb4;
